# Purchase-Intent-Prediction

./: README.md  pyproject.toml  requirements.txt  setup.py
data/features/: engineered_features.json  feature_importance.csv
data/processed/: X_test.csv  X_test_processed.npy  X_train.csv  engineered_data.csv  y_test.npy  y_train.npy
models/: feature_engineering_pipeline.pkl
notebooks/: 01_exploratory_data_analysis.ipynb  02_feature_engineering.ipynb  03_model_development.ipynb  04_model_evaluation.ipynb  05_model_interpretation.ipynb
